change swagger.yaml
